--- a/src/app/roadmap/create/styles.css
+++ b/src/app/roadmap/create/styles.css
@@ -11,11 +11,7 @@ form {
 .input-form {
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
-}
-
-.input-form input {
-    padding: 8px 10px;
+    margin-top: 10px;
 }
 
 .input-form-aggregator {}
