--- a/app/roadmap/create/styles.css
+++ b/app/roadmap/create/styles.css
@@ -2,10 +2,9 @@
     display: flex;
     flex-direction: column;
     border: 1px solid #004a5f;
-    /* TODO: Change border */
     border-radius: 10px;
     margin-top: 10px;
-    padding: 10px;
+    padding: 0 10px 10px 10px;
 }
 
 .input-form {
@@ -29,6 +28,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 10px;
+    margin-top: 15px;
 }
 
 @media (max-width: 770px) {
