--- a/components/roadmap-form/styles.css
+++ b/components/roadmap-form/styles.css
@@ -11,7 +11,13 @@
 .input-form {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 12px;
+}
+
+.input-check-form {
+    display: flex;
+    gap: 3px;
+    margin-top: 5px;
 }
 
 .input-form-aggregator {
