Add error handler

--- a/components/roadmap-list/styles.css
+++ b/components/roadmap-list/styles.css
@@ -20,7 +20,7 @@
 
 .roadmap-list a li {
     padding: 12px 10px;
-    border-bottom: solid 1px #00303d;
+    border-bottom: solid 1px #004a5f;
     list-style-type: none;
 
     &:hover {
