--- a/app/roadmap/[id]/styles.css
+++ b/app/roadmap/[id]/styles.css
@@ -4,3 +4,12 @@
     gap: 10px;
     padding: 10px 0;
 }
+
+.steps-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
