--- a/components/step/styles.css
+++ b/components/step/styles.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     /* TODO: Talvez tenha que alterar a medida que o card cresça */
-    padding: 20px 0;
+    padding: 12px 0;
 }
 
 .status {
@@ -23,17 +23,37 @@
     height: 10px;
     width: 30px;
     padding: 15px;
-    display: flex;;
+    display: flex;
     align-items: center;
     justify-content: center;
     color: var(--background);
 }
 
 .step-card-container {
-    padding: 10px;
+    padding: 12px;
     border: 1px solid #004a5f;
     border-radius: 5px;
     width: 100%;
+}
+
+.step-card-container h3 {
+    margin-bottom: 6px;
+}
+
+.step-card-container p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.step-card-container span {
+    font-size: 14px;
+    display: flex;
+    gap: 4px;
+}
+
+.step-card-container span a {
+    color: #098cb1;
+    text-decoration: underline;
 }
 
 .step-completed {
