--- a/app/login/styles.css
+++ b/app/login/styles.css
@@ -19,3 +19,16 @@
   width: 100%;
   margin-top: 10px;
 }
+
+.login-signup-separator-container {
+  margin: 20px 0;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.login-signup-separator {
+  border-top: 1px solid #ccc;
+  width: 100%;
+}
