--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #ffffff;
+  --background: var(--background);
   --foreground: #004a5f;
 }
 
@@ -58,11 +58,11 @@ select {
 }
 
 .btn-primary {
-  border: 1px solid #004a5f;
+  border: 1px solid  var(--foreground);
   border-radius: 5px;
   padding: 10px;
-  background-color: #004a5f;
-  color: #ffffff;
+  background-color: var(--foreground);
+  color: var(--background);
   /* Config for icons */
   display: flex;
   align-items: center;
@@ -72,17 +72,17 @@ select {
 
   &:hover {
     cursor: pointer;
-    color: #004a5f;
+    color: var(--foreground);
     background-color: #66d4f3;
   }
 }
 
 .btn-secondary {
-  border: 1px solid #004a5f;
+  border: 1px solid var(--foreground);
   border-radius: 5px;
   padding: 10px;
-  background-color: #ffffff;
-  color: #004a5f;
+  background-color: var(--background);
+  color: var(--foreground);
   /* Config for icons */
   display: flex;
   align-items: center;
@@ -91,8 +91,8 @@ select {
 
   &:hover {
     cursor: pointer;
-    background-color: #004a5f;
-    color: #ffffff;
+    background-color: var(--foreground);
+    color: var(--background);
   }
 }
 
@@ -105,5 +105,5 @@ input[type="checkbox"],
 input[type="radio"] {
   width: 18px;
   height: 18px;
-  accent-color: #004a5f;
+  accent-color: var(--foreground);
 }
