--- a/components/roadmap-form/styles.css
+++ b/components/roadmap-form/styles.css
@@ -1,7 +1,7 @@
 .new-roadmap-form {
     display: flex;
     flex-direction: column;
-    border: 1px solid #004a5f;
+    border: 1px solid var(--foreground);
     border-radius: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -42,7 +42,7 @@
 
 .experience-container span {
     padding: 8px 10px;
-    border: 1px solid #004a5f;
+    border: 1px solid var(--foreground);
     border-radius: 5px;
 }
 
