--- a/components/step/styles.css
+++ b/components/step/styles.css
@@ -31,7 +31,7 @@
 
 .step-card-container {
     padding: 12px;
-    border: 1px solid #004a5f;
+    border: 1px solid var(--foreground);
     border-radius: 5px;
     width: 100%;
 }
@@ -66,7 +66,7 @@
 }
 
 .step-progress-icon {
-    background-color: #ffffff;
+    background-color: var(--background);
 }
 
 .step-progress-icon-done {
@@ -76,5 +76,5 @@
 
 .step-progress-icon-progress {
     font-size: 32px;
-    color: #004a5f;
+    color: var(--foreground);
 }
