--- a/components/header/styles.css
+++ b/components/header/styles.css
@@ -1,6 +1,6 @@
 header {
     background-color: #66d4f3;
-    color: var(--foreground);
+    color: #004a5f;
 }
 
 .header-container {
@@ -14,11 +14,11 @@ header {
 }
 
 .btn-signout {
-  border: 1px solid var(--foreground);
+  border: 1px solid #004a5f;
   border-radius: 5px;
   padding: 10px;
   background-color: #66d4f3;
-  color: var(--foreground);
+  color: #004a5f;
   /* Config for icons */
   display: flex;
   align-items: center;
@@ -27,7 +27,7 @@ header {
   
   &:hover {
     cursor: pointer;
-    background-color: var(--foreground);
-    color: var(--background);
+    background-color: #004a5f;
+    color: #ffffff;
   }
 }
