Add modal when update step status

--- a/components/step/styles.css
+++ b/components/step/styles.css
@@ -78,3 +78,17 @@
     font-size: 32px;
     color: #004a5f;
 }
+
+.modal-loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 40px 0;
+}
+
+.modal-loading-container p {
+    font-size: 18px;
+    color: #004a5f;
+}
