--- a/components/modal/styles.css
+++ b/components/modal/styles.css
@@ -24,6 +24,14 @@
 
 .modal-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+    padding: 40px 0;
+}
+
+.modal-text {
+  font-size: 18px;
+  color: #004a5f;
 }
