--- a/components/step/styles.css
+++ b/components/step/styles.css
@@ -71,24 +71,10 @@
 
 .step-progress-icon-done {
     font-size: 28px;
-    color: #4BB543;
+    color: #2f8828;
 }
 
 .step-progress-icon-progress {
     font-size: 32px;
-    color: #004a5f;
-}
-
-.modal-loading-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 40px 0;
-}
-
-.modal-loading-container p {
-    font-size: 18px;
     color: #004a5f;
 }
